<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2018 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:columnCount="5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <!-- Row 1 -->
    <Button
        android:id="@+id/manual_tuner_1"
        android:text="@string/manual_tuner_1"
        android:textColor="@color/manual_tune_digit_color"
        android:tag="1"
        style="@style/DialpadKeyButtonStyle" />
    <Space
        android:layout_width="@dimen/car_padding_6"
        android:layout_height="0dp"/>
    <Button
        android:id="@+id/manual_tuner_2"
        android:text="@string/manual_tuner_2"
        android:textColor="@color/manual_tune_digit_color"
        android:tag="2"
        style="@style/DialpadKeyButtonStyle" />
    <Space
        android:layout_width="@dimen/car_padding_6"
        android:layout_height="0dp"/>
    <Button
        android:id="@+id/manual_tuner_3"
        android:text="@string/manual_tuner_3"
        android:textColor="@color/manual_tune_digit_color"
        android:tag="3"
        style="@style/DialpadKeyButtonStyle" />

    <!-- Vertical spacing between rows. -->
    <Space
        android:layout_height="@dimen/car_padding_5"
        android:layout_width="0dp"
        android:layout_columnSpan="5" />

    <!-- Row 2 -->
    <Button
        android:id="@+id/manual_tuner_4"
        android:text="@string/manual_tuner_4"
        android:textColor="@color/manual_tune_digit_color"
        android:tag="4"
        style="@style/DialpadKeyButtonStyle" />
    <Space
        android:layout_width="@dimen/car_padding_6"
        android:layout_height="0dp"/>
    <Button
        android:id="@+id/manual_tuner_5"
        android:text="@string/manual_tuner_5"
        android:textColor="@color/manual_tune_digit_color"
        android:tag="5"
        style="@style/DialpadKeyButtonStyle" />
    <Space
        android:layout_width="@dimen/car_padding_6"
        android:layout_height="0dp"/>
    <Button
        android:id="@+id/manual_tuner_6"
        android:text="@string/manual_tuner_6"
        android:textColor="@color/manual_tune_digit_color"
        android:tag="6"
        style="@style/DialpadKeyButtonStyle" />

    <!-- Vertical spacing between rows. -->
    <Space
        android:layout_height="@dimen/car_padding_5"
        android:layout_width="0dp"
        android:layout_columnSpan="5" />

    <!-- Row 3 -->
    <Button
        android:id="@+id/manual_tuner_7"
        android:text="@string/manual_tuner_7"
        android:textColor="@color/manual_tune_digit_color"
        android:tag="7"
        style="@style/DialpadKeyButtonStyle" />
    <Space
        android:layout_width="@dimen/car_padding_6"
        android:layout_height="0dp"/>
    <Button
        android:id="@+id/manual_tuner_8"
        android:text="@string/manual_tuner_8"
        android:textColor="@color/manual_tune_digit_color"
        android:tag="8"
        style="@style/DialpadKeyButtonStyle" />
    <Space
        android:layout_width="@dimen/car_padding_6"
        android:layout_height="0dp"/>
    <Button
        android:id="@+id/manual_tuner_9"
        android:text="@string/manual_tuner_9"
        android:textColor="@color/manual_tune_digit_color"
        android:tag="9"
        style="@style/DialpadKeyButtonStyle" />

    <!-- Vertical spacing between rows. -->
    <Space
        android:layout_height="@dimen/car_padding_5"
        android:layout_width="0dp"
        android:layout_columnSpan="5" />

    <!-- Row 4 -->
    <ImageView
        android:id="@+id/manual_tuner_backspace"
        android:scaleType="center"
        android:src="@drawable/ic_backspace"
        style="@style/DialpadKeyButtonStyle" />
    <Space
        android:layout_width="@dimen/car_padding_6"
        android:layout_height="0dp"/>
    <Button
        android:id="@+id/manual_tuner_0"
        android:text="@string/manual_tuner_0"
        android:textColor="@color/manual_tune_digit_color"
        android:tag="0"
        style="@style/DialpadKeyButtonStyle" />
    <Space
        android:layout_width="@dimen/car_padding_6"
        android:layout_height="0dp"/>
    <com.android.car.radio.widget.BandToggleButton
        android:id="@+id/manual_tuner_band_toggle"
        style="@style/DialpadKeyButtonStyle" />
</GridLayout>